[package]
name = "rbuild"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh-key = { version = "0.6", features = [
    "ed25519",
    "std",
    "alloc",
    "rand_core",
    "encryption",
] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[target.'cfg(windows)'.dependencies]
# .gitignore semantics for the source walk — client only
ignore = "0.4"
rpassword = "7"

[[bin]]
name = "rbuild"
path = "src/bin/rbuild.rs"

[[bin]]
name = "rbuild-server"
path = "src/bin/rbuild-server.rs"

[profile.release]
opt-level = 2
