[package]
name = "cargo-rbuild"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh-key = { version = "0.6", features = [
    "ed25519",
    "std",
    "alloc",
    "rand_core",
    "encryption",
] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zstd = "0.13"

[dev-dependencies]
# tests/remote.rs mints a throwaway host key and client key per run, so it never
# reads ~/.ssh.
ssh-key = { version = "0.6", features = ["ed25519", "std", "alloc", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(windows)'.dependencies]
# .gitignore semantics for the source walk — client only
ignore = "0.4"
rpassword = "7"

[[bin]]
name = "cargo-rbuild"
path = "src/bin/cargo-rbuild.rs"

[[bin]]
name = "rbuild-server"
path = "src/bin/rbuild-server.rs"

[profile.release]
opt-level = 2
